--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
       </div>
       <div class="navbar-buttons">
         <button class="btn-sign-in">Sign in</button>
-        <a href="https://upc-mecanillama-si653.web.app/"><button class="btn">Start Free</button></a>
+        <a href="https://mecanillama-web-app.web.app/"><button class="btn">Start Free</button></a>
       </div>
     </nav>
   </header>
@@ -52,7 +52,7 @@
         </div>
         <div class="hero-buttons">
           <div class="hero-start-btn">
-            <a href="https://upc-mecanillama-si653.web.app/"><button class="btn">Get Started</button></a>
+            <a href="https://mecanillama-web-app.web.app/"><button class="btn">Get Started</button></a>
           </div>
           <div class="btn-container">
             <a href="">
@@ -304,7 +304,7 @@
         </script>
         Mecanillama
       </p>
-      <a href="https://github.com/Mecanillama" target="_blank">
+      <a href="https://github.com/BlueTrends" target="_blank">
         <i class="fab fa-github"></i
       ></a>
     </div>
