Fix: Video link

--- a/index.html
+++ b/index.html
@@ -232,14 +232,9 @@
         Discover a better way to go to a mechanical workshop
       </div>
       <div>
-        <div id="cajon1" >
+        <div id="video1" >
           <h1 style="color:white;">About de product</h1>
-          <iframe width="560" height="315" src="https://www.youtube.com/embed/WwRF19kptJg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-        </div>
-        <div id="cajon2">
-          <h1 style="color:white;">About de team </h1>
-          <iframe width="560" height="315" src="https://www.youtube.com/embed/ovwx_onCqqg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-
+          <iframe width="560" height="315" src="https://youtu.be/vAvcMxWIe-U" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </div>
          </div>
       <div class="banner-button">
